--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vue-tsc && vite build",
     "preview": "vite preview",
     "test": "vue-tsc"
   },
   "dependencies": {
+    "@vueuse/core": "^10.10.0",
     "axios": "^1.7.2",
     "pinia": "^2.1.7",
     "sass": "^1.77.2",
