--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@vueuse/core": "^10.10.0",
     "axios": "^1.7.2",
+    "gsap": "^3.12.5",
     "pinia": "^2.1.7",
     "sass": "^1.77.2",
     "vue": "^3.4.21",
