--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "traditionalcolor",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.5",
+  "author": "Flood <ssflood7d@gmail.com>",
   "type": "module",
   "scripts": {
     "dev": "vite",
